Fix form input misalignment

--- a/web/css/forms.css
+++ b/web/css/forms.css
@@ -14,6 +14,7 @@
 
 .form input[type=text], .form input[type=password] {
     font-size: 14px;
+    box-sizing: border-box;
     width: 100%;
     margin-bottom: 10px;
     padding: 10px;
